# me

./: .gitignore  Cargo.toml  bun.lockb  dprint.json  input.css  justfile  package.json  svelte.config.js  vite.config.ts
assets/css/: tailwind.css
assets/html/: not_found.html
configuration/: base.toml  local.toml
src/: app.css  configuration.rs  lib.rs  main.rs  uitls.rs
src/lib/: config.ts
src/routes/: +layout.svelte  +page.svelte  footer.svelte
templates/: footer.html  head.html  home.html  index.html  navbar.html  projects.html  showcases.html
