[package]
name = "me"
version = "0.0.1"
edition = "2024"
description = ""
license = "MIT"
readme = "README.md"
documentation = ""
homepage = "https://github.com/ZennoZenith/me"
repository = "https://github.com/ZennoZenith/me"
authors = ["Zenno Zenith"]

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde-aux = "4.5"
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
secrecy = { version = "0.10", features = ["serde"] }
config = "0.15"
dotenv = "0.15"
tera = "1"
uuid = { version = "1", features = ["v4","serde","fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
env_logger = "0.11"
once_cell = "1.21.1"
